Fix table alignments in manage changes dialog
-Resolved text bleeding between columns when font-size increases
-Made date/comment columns auto-sized based on content
-Ensures consistent alignment between headers and entries

Adapt patch to LibreOffice Online.

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -62,6 +62,12 @@
 	grid-gap: 8px;
 }
 
+#AcceptRejectChangesDialog #writerchanges.jsdialog.ui-treeview {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr) repeat(2, minmax(min-content, auto));
+	column-gap: 8px;
+}
+
 #AcceptRejectChangesDialog .jsdialog.ui-grid .has-img,
 #AcceptRejectChangesDialog .jsdialog.ui-grid .menubutton {
 	margin: 0 !important;
@@ -69,8 +75,8 @@
 }
 
 #AcceptRejectChangesDialog .ui-treeview-headers,
-#AcceptRejectChangesDialog .jsdialog.ui-treeview-entry {
-	grid-template-columns: 60px 60px 120px 130px;
+#AcceptRejectChangesDialog .jsdialog.ui-treeview-entry { 
+	display: contents;
 }
 
 #AcceptRejectChangesDialog .jsdialog.ui-treeview-entry > div:nth-child(2),
